SERVER-25910 fail setShardVersion on mongod if not running with --shardsvr